fix(sit): 5 SIT-blocking bugs + 2 cleanups in CâyGiaPhảSố
Pre-SIT audit found 5 production-impact bugs and 2 quality issues. All fixed.

## Bugs fixed

1. **NPE in role endpoint** — `GET /families/{familyId}/members/{memberId}/role`
   returned 500 for every "pure genealogy entry" member (no user_id). Root
   cause: `Map.of("role", role)` throws NullPointerException when role is null
   (Map.of rejects null values via Objects.requireNonNull). Fixed by using
   `Collections.singletonMap` which allows null.

2. **Missing `GET /time-capsules/{id}`** — frontend hook silently swallowed
   the 404 via `.catch(() => null)`, so the seal-screen preview always showed
   blank. Added the endpoint with the same envelope as the list endpoint
   (capsule + creator + recipient + daysUntilUnlock + isUnlockable), but
   never leaking the sealed `content` (that still comes from `POST .../open`).

3. **Missing `GET /relationships?familyId=...`** — frontend
   `familyApi.relationships()` would 404. Added endpoint returning a flat
   array (matches the frontend's `.get<Relationship[]>` typing), backed by
   the existing `RelationshipRepository.findAllForFamily`.

4. **Route conflict `GET /users/me` → 500** — `/{id}` mapping caught the
   literal "me" path, then the UUID converter threw on "me". Added explicit
   `@GetMapping("/me")` ahead of `/{id}` so the literal segment wins.

5. **`useSearchParams()` without `<Suspense>` boundary** on
   `(main)/stories/new/page.tsx` and `(main)/recipes/new/page.tsx` — Next.js
   build emits a warning and bails out to CSR. Wrapped each page body in
   `<Suspense fallback={null}>` matching the pattern in `(auth)/login/page.tsx`.

## Quality improvements

- Replaced 4 silent `catch (Exception ignore) {}` blocks in `StoryService`,
  `TimeCapsuleService` (×2), and `AchievementService` with
  `log.warn(...)` so SIT can spot real bugs in the notification-fanout path.
  Added `@Slf4j` to the three services that were missing it.

- Declared `qrcode` + `html-